--- a/index.html
+++ b/index.html
@@ -3,38 +3,28 @@
 <head>
     <title>SemenQChallenge</title>
     <link rel="stylesheet" type="text/css" href="css2.css">
+    <script src="./script" ></script>
 </head>
 <body>
     <h1>SemenQChallenge</h1>
-    <table border="1">
-        <tr>
-            <th></th>
-            <th>Nombre del Jugador</th>
-            <th>Rol</th>
-            <th>Cuenta</th>
-            <th>Stats</th>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>Bait</td>
-            <td><img src="images/jgl.png" alt="jng"></td>
-            <td>cncr get</td>
-            <td><a href="https://www.op.gg/summoners/euw/cncr%20get" target="_blank">OP.GG</a></td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>Alex</td>
-            <td><img src="images/adc.png" alt="adc"></td>
-            <td>OceloteMusulman</td>
-            <td><a href="https://www.op.gg/summoners/euw/OceloteMusulman" target="_blank">OP.GG</a></td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>Jordi</td>
-            <td><img src="images/adc.png" alt="adc"></td>
-            <td>pancraciosinpelo</td>
-            <td><a href="https://www.op.gg/summoners/euw/pancraciosinpelo" target="_blank">OP.GG</a></td>
-        </tr>
-    </table>
+    <div id="resultados">
+        <table border="1">
+            <thead>
+                <tr>
+                    <th>Nombre del Jugador</th>
+                    <th>Rol</th>
+                    <th>Cuenta</th>
+                    <th>Elo</th>
+                    <th>LPs</th>
+                    <th>Stats</th>
+                </tr>
+            </thead>
+            <tbody id="tablaResultados">
+                <!-- Aquí se agregarán las filas de resultados -->
+            </tbody>
+        </table>
+    </div>
+
+    <script src="./script"></script>
 </body>
 </html>
